# nsb2

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  env.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: darkmode.mplstyle  lightmode.mplstyle
configs/: HESS.py
docs/: conf.py  index.rst
docs/about/: features.rst  introduction.rst
docs/api/: atmosphere.rst  core.rst  emitter.rst  index.rst  instrument.rst  nsb2.rst
docs/examples/: HESSI_Tutorial.ipynb  LST_Tutorial.ipynb  MST_Tutorial.ipynb  index.rst
docs/getting_started/: installation.rst  quickstart.rst
examples/: ATOM_Tutorial.ipynb  HESSII_Tutorial.ipynb  HESSI_Tutorial.ipynb  pSCT_Tutorial.ipynb
licenses/: LICENSE.rst
nsb/: __init__.py
nsb/atmosphere/: extinction.py  scattering.py
nsb/blacksky/: bandpass.py  blacksky.py  catalog.py  constants.py  formulas.py  photometric.py  spatial.py  spectral.py  utils.py
nsb/core/: __init__.py  atmosphere.py  emitter.py  instrument.py  logic.py  ray.py  scattering.py  utils.py
nsb/emitter/: airglow.py  galactic.py  moon.py  stars.py  zodiacal.py
nsb/instrument/: HESS.py  __init__.py
nsb/instrument/response/: h_response.pkl
nsb/utils/: bandpass.py  constants.py  formulas.py  plots.py  quad.py  spectra.py
nsb/utils/assets/: airglow_130sfu.csv  g_passband.csv  johnson_v.csv  moon.ipynb
nsb2/: __init__.py
nsb2/atmosphere/: __init__.py  single_scattering.py
nsb2/core/: __init__.py  atmosphere.py  coordinates.py  dtypes.py  instrument.py  interpolation.py  lightpath.py  photometry.py  pipeline.py  solver.py  sources.py  spectral.py
nsb2/emitter/: airglow.py  moon.py  stars.py  zodiacal.py
nsb2/instrument/: CTAO.py  HESS.py  __init__.py
nsb2/instrument/response/: HESSI_best_guess.npz  LST_North_1_like.npz  MST_North_like.npz
paper/: paper.md
tests/: __init__.py  conftest.py  test_atmosphere.py  test_emitter.py  test_instrument.py  test_pipeline.py  test_spectral.py
